# Email-Triage

./: .gitignore  Dockerfile  HF_DEPLOY_GUIDE.md  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  submission_summary.md  test_logic.py
env/: __init__.py  data.py  environment.py  tasks.py
server/: app.py
server/static/: index.html  script.js  style.css
