[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "A real-world email triage environment for AI agents"
readme = "README.md"
authors = [{ name = "hackathon-submission" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai>=2.7.2",
    "requests",
    "openenv-core>=0.2.0",
]

[project.scripts]
openenv-server = "server.app:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]
